app4HashingAndChecksum/microservice3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4-microservice3
spec:
  selector:
    app: app4-microservice3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8032
  type: ClusterIP
