app4HashingAndChecksum/microservice3/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app4-microservice3
spec:
  selector:
    matchLabels:
      app: app4-microservice3
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/app4-microservice2"
        ]
